--- a/src/index.css
+++ b/src/index.css
@@ -27,13 +27,30 @@ main {
 .grid-view div.card.ui {
   margin: 1.25rem;
 }
-/*
+
 .main-img {
   display: block;
   border-radius: 100%;
-  margin: 0 auto;
-} */
+  margin: 5% auto;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+} 
 
 header h1 {
+  text-align: center;
+}
+
+.listLink {
+  margin-left: 40%;
+  margin-bottom: 5%;
+  padding-bottom: 5%;
+  text-align: center;
+}
+
+
+.search-form {
+  text-align: center;
+}
+
+.charList {
   text-align: center;
 }
